Added JSONB custom field for entities, added auth/JWT logic

--- a/MARS_BE/appsettings.Development.json
+++ b/MARS_BE/appsettings.Development.json
@@ -7,5 +7,12 @@
   }, 
   "ConnectionStrings": {
     "Default": "Host=localhost;Port=5432;Database=mars_dev;Username=postgres;Password=password"
+  },
+  "Jwt": {
+    "Issuer": "MARS",
+    "Audience": "MARS.API",
+    "Key": "CHANGE_ME_TO_A_LONG_RANDOM_SECRET_64+CHARS",
+    "AccessTokenMinutes": 30,
+    "RefreshTokenDays": 14
   }
 }
