Refactored Auth/User logic a bit

--- a/MARS_BE/appsettings.Development.json
+++ b/MARS_BE/appsettings.Development.json
@@ -9,8 +9,8 @@
     "Default": "Host=localhost;Port=5432;Database=mars_dev;Username=postgres;Password=password"
   }, 
   "Jwt": {
-  "Issuer": "MyApp",
-  "Audience": "MyApp.API",
-  "Key": "supersecretkey1234567890supersecretkey123456"
+    "Issuer": "MARS",
+    "Audience": "MARS.Client",
+    "Key": "supersecretkey1234567890supersecretkey123456"
   }
 }
